--- a/css/style.css
+++ b/css/style.css
@@ -22036,3 +22036,27 @@ span.cursor {
 span.cursor.typing {
     animation: none;
 }
+
+
+.tools {
+    width: 80%;
+    margin: 5px 0 0 5%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    column-gap: 1em;
+    row-gap: 1em;
+}
+
+.tool-circ img {
+    height: 5em;
+    width: 5em;
+    transition: transform 0.3s;
+    cursor: pointer;
+}
+
+.tool-circ img:hover {
+    transition: all 0.3s ease-in-out;
+    transform: scale(1.5);
+}
