--- a/css/style.css
+++ b/css/style.css
@@ -15703,8 +15703,7 @@ div#featured-project-carousel {
     overflow: visible;
     position: relative;
     border-radius: 14px;
-    background: #f02981;
-    background: linear-gradient(145deg, #645cff 0%, #0b00e6 100%);
+    background: #645cff;
 }
 
 .progress-charts .progress .progress-bar span.percent-label {
