--- a/css/style.css
+++ b/css/style.css
@@ -6926,166 +6926,7 @@ Background Image
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-}
-
-.bg_image--1 {
-    background-image: url(../images/bg-image-1.jpg);
-}
-
-.bg_image--2 {
-    background-image: url(../images/bg-image-2.jpg);
-}
-
-.bg_image--3 {
-    background-image: url(../images/bg-image-3.jpg);
-}
-
-.bg_image--4 {
-    background-image: url(../images/bg-image-4.jpg);
-}
-
-.bg_image--5 {
-    background-image: url(../images/bg-image-5.jpg);
-}
-
-.bg_image--6 {
-    background-image: url(../images/bg-image-6.jpg);
-}
-
-.bg_image--7 {
-    background-image: url(../images/bg-image-7.jpg);
-}
-
-.bg_image--8 {
-    background-image: url(../images/bg-image-8.jpg);
-}
-
-.bg_image--9 {
-    background-image: url(../images/bg_70.png);
-}
-
-.bg_image--10 {
-    background-image: url(../images/bg-image-10.jpg);
-}
-
-.bg_image--11 {
-    background-image: url(../images/bg-image-11.jpg);
-}
-
-.bg_image--12 {
-    background-image: url(../images/bg-image-12.jpg);
-}
-
-.bg_image--13 {
-    background-image: url(../images/bg-image-13.jpg);
-}
-
-.bg_image--14 {
-    background-image: url(../images/bg/bg-image-14.jpg);
-}
-
-.bg_image--15 {
-    background-image: url(../images/bg/bg-image-15.jpg);
-}
-
-.bg_image--16 {
-    background-image: url(../images/bg/bg-image-16.jpg);
-}
-
-.bg_image--17 {
-    background-image: url(../images/bg/bg-image-17.jpg);
-}
-
-.bg_image--18 {
-    background-image: url(../images/bg/bg-image-18.jpg);
-}
-
-.bg_image--19 {
-    background-image: url(../images/bg/bg-image-19.jpg);
-}
-
-.bg_image--20 {
-    background-image: url(../images/bg/bg-image-20.jpg);
-}
-
-.bg_image--21 {
-    background-image: url(../images/bg/bg-image-21.jpg);
-}
-
-.bg_image--22 {
-    background-image: url(../images/bg/bg-image-22.jpg);
-}
-
-.bg_image--23 {
-    background-image: url(../images/bg/bg-image-23.jpg);
-}
-
-.bg_image--24 {
-    background-image: url(../images/bg/bg-image-24.jpg);
-}
-
-.bg_image--25 {
-    background-image: url(../images/bg/bg-image-25.jpg);
-}
-
-.bg_image--26 {
-    background-image: url(../images/bg/bg-image-26.jpg);
-}
-
-.bg_image--27 {
-    background-image: url(../images/bg/bg-image-27.jpg);
-}
-
-.bg_image--28 {
-    background-image: url(../images/bg/bg-image-28.jpg);
-}
-
-.bg_image--29 {
-    background-image: url(../images/bg/bg-image-29.jpg);
-}
-
-.bg_image--30 {
-    background-image: url(../images/bg/bg-image-30.jpg);
-}
-
-.bg_image--31 {
-    background-image: url(../images/bg/bg-image-31.jpg);
-}
-
-.bg_image--32 {
-    background-image: url(../images/bg/bg-image-32.jpg);
-}
-
-.bg_image--33 {
-    background-image: url(../images/bg/bg-image-33.jpg);
-}
-
-.bg_image--34 {
-    background-image: url(../images/bg/bg-image-34.jpg);
-}
-
-.bg_image--35 {
-    background-image: url(../images/bg/bg-image-35.jpg);
-}
-
-.bg_image--36 {
-    background-image: url(../images/bg/bg-image-36.jpg);
-}
-
-.bg_image--37 {
-    background-image: url(../images/bg/bg-image-37.jpg);
-}
-
-.bg_image--38 {
-    background-image: url(../images/bg/bg-image-38.jpg);
-}
-
-.bg_image--39 {
-    background-image: url(../images/bg/bg-image-39.jpg);
-}
-
-.bg_image--40 {
-    background-image: url(../images/bg/bg-image-40.jpg);
+    background-image: url(../images/background.png);
 }
 
 /* Height and width */
